<resources>
    <string name="app_name">Marsz Sprint Bieganie</string>
    <string name="button_send">Button</string>
    <string name="button_kolarstwo">Kolarstwo</string>
    <string name="button_marsz">Marsz</string>
    <string name="button_sprint">Sprint</string>
    <string name="button_kajakarstwo">Kajakarstwo</string>
    <string name="button_send2">Wcisnij</string>
    <string name="text_view"></string>
    <string name="start_new_training">Rozpocznij nowy trening</string>
    <string name="motivation">Na pewno dałeś z siebie wszystko!</string>
    <string name="last_training_text">Twój ostatni trening:</string>

    <string name="paused"> Wznów </string>
    <string name="started"> Pauza </string>
    <string name="end_training"> Zakończ trening </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- training data: -->
    <string name="duration">Czas trwania: %1$.0f minut</string>
    <string name="curSpeedText">Prędkość: %1$.1f km/h</string>
    <string name="avgSpeedText">Średnia prędkość: %1$.1f km/h</string>
    <string name="maxSpeedText">Maksymalna prędkość: %1$.1f km/h</string>
    <string name="distanceText">Dystans: %1$.0f m</string>
    <string name="kcalText">Spalone kalorie: %.1f kcal</string>
    <string name="distanceTextKm">Dystans: %1$.2f km</string>
<!--    <string name="kcalText">Spalone kalorie: %d kcal</string>-->
    <string name="user_image_content_description">zdjęcie</string>
    <string name="action_button_content_description">zdjęcie</string>
    <string-array name="statistics_options">
        <item>Ostatni trening</item>
        <item>Ostatnie 5 treningów</item>
        <item>Ostatnie 10 treningów</item>
    </string-array>
    <string-array name="myraces_spinner_options">
        <item>Aktywne wyścigi</item>
        <item>Nadchodzące wyścigi</item>
        <item>Zakończone wyścigi</item>
    </string-array>
    <string name="statistics_training_text">Statystyki:</string>
    <string name="set_route_text">Wyznacz trasę:</string>
    <string name="reset_route">Wyczyść trasę</string>
    <string name="set_route">Ustaw trasę</string>
    <string name="cancel_button">Anuluj</string>
    <string name="skip_route_button">Pomiń wyznaczanie trasy</string>

    <!-- Main layout data-->
    <string name="selectDiscipline"> Wybierz dyscypile sportową</string>
    <string name="userProfile">Twój profil</string>
    <string name="settingsTxt">Ustawienia</string>

    <!--    friends list data: -->
    <string name="checkYourFriendsList">Sprawdź, kto jest aktywny z twoich znajomych:</string>
    <string name="friendsListTxt">Lista znajomych</string>
    <string name="welcomeText">Witaj, %1$s!</string>

    <!--    Statistic data-->
    <string name="statisticChoose">Wybierz okres aktywności</string>


    <!--    Log in -->
    <string name="welcome_login">Zaloguj się</string>
    <string name="email">Email</string>
    <string name="setEmail">Wpisz email</string>
    <string name="password">Hasło</string>
    <string name="setPassword">Wpisz hasło</string>
    <string name="dontRememberPassword">Nie pamiętasz hasła? Zresetuj hasło.</string>
    <string name="logInOtherWay">Albo zaloguj się z</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>

    <!--    SignUp-->
    <string name="welcome_signup">Utwórz konto</string>
    <string name="username">Nazwa użytkownika</string>
    <string name="setUsername">Wpisz nazwę</string>
    <string name="repassword">Podaj hasło jeszcze raz</string>
    <string name="signup">Zarejestruj się</string>

    <!--    Home page-->
    <!--<string name="welcome_user">Witaj, Gabriel!</string>-->
    <string name="online_friends">Sprawdź, kto jest aktywny z twoich znajomych</string>
    <string name="upcoming_events">Nadchodzące wydarzenia</string>
    <string name="noAccountRegister">Nie masz konta? Stwórz je teraz!</string>
    <string name="wrong_email_or_password">Błędny email lub hasło</string>
    <string name="please_complete_the_form">Wypełnij brakujące pola formularza</string>
    <string name="please_complete_route">Najpierw wyznacz trasę lub punkt docelowy</string>
    <string name="please_complete_route_race">Najpierw wyznacz trasę</string>
    <string name="wrong_repeated_password">Powtórzone hasło jest błędne</string>
    <string name="something_went_wrong">Coś poszło nie tak</string>
    <string name="insert_data_textView">Podaj dane</string>
    <string name="nick">Nick</string>
    <string name="setNick">Wpisz nick</string>
    <string name="add_data_btn_text">Dodaj dane</string>
    <string name="sex">Płeć</string>
    <string name="birth_date_textView">Data urodzenia</string>
    <string name="height">Wzrost</string>
    <string name="weight">Waga</string>
    <string name="country">Państwo</string>
    <string name="skip_user_data_creation">Na razie pomiń</string>
    <string name="setFirstName">Wpisz imię</string>
    <string name="firstName">Imię</string>
    <string name="lastName">Nazwisko</string>
    <string name="setLastName">Wpisz nazwisko</string>
    <string name="settingsBannerText">Ustawienia</string>
    <string name="changePassword">Zmień swoje hasło</string>
    <string name="changeUsername">Zmień nazwę użytkownika</string>
    <string name="changeEmail">Zmień email</string>
    <string name="changeData">Zmień dane użytkownika</string>
    <string name="changeAvatar">Zmień swój awatar</string>
    <string name="logOut">Wyloguj się</string>
    <string name="noStats">Brak danych statystyk ostatniego treningu</string>
    <string name="race_name_text">Nazwa wyścigu</string>
    <string name="generated_race_code">Wygenerowany kod wyścigu:</string>
    <string name="invite_friends">Zaproś znajomych</string>
    <string name="contestants_list">Lista uczestników</string>
    <string name="race_time">Czas trwania:</string>
    <string name="ranking">Ranking</string>


    <!--    Genders:-->
    <string-array name="genders">
        <item>mężczyzna</item>
        <item>kobieta</item>
    </string-array>

    <!--    Countries:-->
    <string-array name="countries">
        <item>Polska</item>
        <item>Stany Zjednoczone</item>
        <item>Francja</item>
        <item>Japonia</item>
    </string-array>

    <!-- Find races-->
    <string name="findRace">Szukaj wyścig</string>

    <!--    User account view-->
    <string name="birth_date_txt">Data urodzenia: </string>
    <string name="country_txt">Państwo: </string>
    <string name="gender_txt">Płeć: </string>
    <string name="height_txt">Wzrost: </string>
    <string name="weight_txt">Waga: </string>
    <string name="accept">Akceptuj</string>
    <string name="reject">Odrzuć</string>
    <string name="findUser">Podaj nick użytkownika</string>
    <string name="invite">Zaproś</string>
    <string name="invitation_sent">Zaproszenie zostało wysłane</string>
    <string name="delete">Usuń</string>

<!--    statistics by period-->
    <string name="kilometers">%1$.1f km</string>
    <string name="kmh">%1$.1f km/h</string>
    <string name="duration_period">%1$.1f s</string>
    <string name="friends_activity_race">%1$s zdobył %2$d miejsce w %3$s\n</string>
    <string name="friends_activity_training">%1$s przebiegł %2$.1f m</string>
</resources>