<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F2F2">


    <View
        android:id="@+id/top_view3"
        android:layout_width="385dp"
        android:layout_height="259dp"
        android:layout_marginTop="-130dp"
        android:background="@drawable/bg_view3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/top_view4"
        android:layout_width="352dp"
        android:layout_height="320dp"
        android:layout_marginStart="-100dp"
        android:layout_marginTop="-130dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/bg_view2"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="56dp"
        android:text="@string/welcome_signup"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_view4"
        app:layout_constraintVertical_bias="0.533">

        <TextView
            android:id="@+id/textView_Email4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nick"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText_Email4"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/edittext_background"
            android:ems="10"
            android:hint="@string/setNick"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:textColor="@color/light_gray"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView_Email3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/email"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText_Email3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/edittext_background"
            android:ems="10"
            android:hint="@string/setEmail"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:textColor="@color/light_gray"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/password"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText_Email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/edittext_background"
            android:ems="10"
            android:hint="@string/setPassword"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:textColor="@color/light_gray"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/repassword"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText_Password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/edittext_background"
            android:ems="10"
            android:hint="@string/setPassword"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:textColor="@color/light_gray"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_background"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>