<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F2F2">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        tools:ignore="MissingConstraints"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@android:style/Widget.DeviceDefault.ProgressBar.Large"/>

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="152dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@+id/top_view4"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.533">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nick"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText_Nick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:hint="@string/setNick"
                android:inputType="textPersonName"
                android:padding="12dp"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/sex"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner_Sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:padding="12dp"
                android:textColor="@color/light_gray"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/birth_date_textView"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/birth_date_btn"
                style="?android:spinnerStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:ems="10"
                android:padding="12dp"
                android:text="23 APR 2023"
                android:textColor="@color/light_gray"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/height"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <NumberPicker
                        android:id="@+id/height_picker"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:background="@drawable/edittext_background"
                        android:ems="10"
                        android:padding="12dp"
                        android:textColor="@color/light_gray"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/weight"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <NumberPicker
                        android:id="@+id/weight_picker"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:background="@drawable/edittext_background"
                        android:ems="10"
                        android:hint="@string/setPassword"
                        android:inputType="textPassword"
                        android:padding="12dp"
                        android:textColor="@color/light_gray"
                        android:textSize="18sp" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/country"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner_Country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:padding="12dp"
                android:textColor="@color/light_gray"
                android:textSize="18sp" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_SignInButton"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/button_background"
                android:text="@string/add_data_btn_text"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/skip_data_creation_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/skip_user_data_creation"
                android:textAlignment="center"
                android:textSize="15sp" />

        </LinearLayout>

    </ScrollView>

    <View
        android:id="@+id/top_view3"
        android:layout_width="385dp"
        android:layout_height="259dp"
        android:layout_marginTop="-130dp"
        android:background="@drawable/bg_view3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/top_view4"
        android:layout_width="353dp"
        android:layout_height="278dp"
        android:layout_marginStart="-100dp"
        android:layout_marginTop="-130dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/bg_view2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView_UserData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="56dp"
        android:text="@string/insert_data_textView"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>