<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".UpcomingRaceFragment"
    android:fillViewport="true">

    <TextView
        android:id="@+id/race_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/race_name_text"
        android:shadowColor="@color/green"
        android:shadowDx="-2"
        android:shadowDy="-2"
        android:shadowRadius="1"
        android:textSize="30dp"
        android:paddingBottom="5dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/generated_race_code_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:text="@string/generated_race_code"
            android:textColor="@color/green"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/generated_race_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1111"
            android:textColor="@color/green"
            android:textSize="15dp"
            android:paddingLeft="4dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/invite_friends_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/invite_friends" />

    <TextView
        android:id="@+id/contestants_list_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contestants_list"
        android:shadowColor="@color/green"
        android:shadowDx="-2"
        android:shadowDy="-2"
        android:shadowRadius="1"
        android:textSize="25dp"
        android:paddingBottom="5dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/contestants_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/contestants_list_text"/>

</LinearLayout>