<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:fillViewport="true">

    <TextView
        android:id="@+id/race_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/race_name_text"
        android:shadowColor="@color/green"
        android:shadowDx="-2"
        android:shadowDy="-2"
        android:shadowRadius="1"
        android:textSize="30dp"
        android:paddingBottom="5dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/race_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/race_time"
            android:shadowColor="@color/green"
            android:shadowDx="-2"
            android:shadowDy="-2"
            android:shadowRadius="1"
            android:textSize="25dp"
            android:paddingBottom="5dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"/>

        <TextView
            android:id="@+id/race_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00:00:00"
            android:shadowColor="@color/green"
            android:shadowDx="-2"
            android:shadowDy="-2"
            android:shadowRadius="1"
            android:textSize="25dp"
            android:paddingBottom="5dp"
            android:paddingLeft="3dp"
            android:paddingTop="10dp"/>

    </LinearLayout>

    <com.here.sdk.mapview.MapView
        android:id="@+id/map_view"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/ranking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ranking"
        android:shadowColor="@color/green"
        android:shadowDx="-2"
        android:shadowDy="-2"
        android:shadowRadius="1"
        android:textSize="25dp"
        android:paddingBottom="5dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/ranking_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/ranking"/>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/ranking_viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="160dp"
        app:layout_constraintTop_toBottomOf="@id/ranking_tab" />

</LinearLayout>